  * AMD64 support.
    - patches/*.diff: Add amd64-specific hunks for patches that hack i386 files.
    - arch/amd64/amd64-generic.config: New.  Generic x86_64 config.
    - arch/amd64/amd64-k8.config: New.  K8 config.
    - arch/amd64/em64t-p4.config: New.  P4 config.
    - patches/907_cpu_class.diff: Set hw.machine to "x86_64".  This improves
    compatibility with old config.sub scripts.
  * patches/binutils.diff: Add binutils fixes for amd64 code.

  [ Aurelien Jarno ]
  * Fix a remote denial of service in NFS server (FreeBSD-SA-06:10.nfs / CVE-2006-0900).

 -- Robert Millan <rmh@aybabtu.com>  Thu,  2 Mar 2006 11:38:52 +0100

kfreebsd-5 (5.3-6) unstable; urgency=low

  * Changed SCSI_DELAY to 2000. Users that need a longer time could
    change this value in /boot/loader.conf (closes: bug#323155).

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 29 Aug 2005 14:25:44 +0200

kfreebsd-5 (5.3-5) unstable; urgency=low

  * Enabled atapicam driver (closes: bug#323155).
  * Allow the kernel to execve ET_DYN files. 

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 17 Aug 2005 15:44:18 +0200

kfreebsd-5 (5.3-4) unstable; urgency=low

  * Added OSS_GETVERSION ioctl. Patch from Robert Millan (closes: 
    bug#322197)

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 10 Aug 2005 00:56:00 +0200

kfreebsd-5 (5.3-3) unstable; urgency=low

  * Fixed the generation of the preinst script.

 -- Aurelien Jarno <aurel32@debian.org>  Sat,  6 Aug 2005 05:47:11 +0200

kfreebsd-5 (5.3-2) unstable; urgency=low

  [ Aurelien Jarno ]
  * Provide the kernel sources as /usr/src/kfreebsd-source-5.3.tar.bz2
  * Change the owner of the files inside kfreebsd-source-5.3.tar.bz2 to
    root:src.
  * Build a binary package kfreebsd-image-5.3 containing the kernel.
  * Build a binary package kfreebsd-headers-5.3 containing the headers.
  * Don't create kfreebsd.gz in postinst.
  * Make the kfreebsd-source-5.3 buildable on non GNU/kFreeBSD systems.
  * Added an abiname field.

  [ Guillem Jover ]