@@ -208,18 +208,18 @@ ifeq ($(os), kfreebsd)
 binary-arch: build-arch install-arch
 	dh_testdir
 	dh_testroot
-	dh_installdocs -a
-	dh_installchangelogs -a
-	dh_link -a
-	dh_strip -a -X/boot
-	dh_compress -a
-	dh_fixperms -a
-	dh_makeshlibs -a
-	dh_installdeb -a
-	dh_shlibdeps -a -X/boot
-	dh_gencontrol -a
-	dh_md5sums -a
-	dh_builddeb -a
+	dh_installdocs -s
+	dh_installchangelogs -s
+	dh_link -s
+	dh_strip -s -X/boot
+	dh_compress -s
+	dh_fixperms -s
+	dh_makeshlibs -s
+	dh_installdeb -s
+	dh_shlibdeps -s -X/boot
+	dh_gencontrol -s
+	dh_md5sums -s
+	dh_builddeb -s
 else
 binary-arch:
 	# We have nothing to do
