@@ -41,12 +41,14 @@ kfreebsd-6 (6.0-0.1) UNRELEASED; urgency=low
     - arch/amd64/em64t-p4.config: New.  P4 config.
     - patches/907_cpu_class.diff: Set hw.machine to "x86_64".  This improves
     compatibility with old config.sub scripts.
-  * patches/binutils.diff: Add binutils fixes for amd64 code.
+    - patches/binutils.diff: Add binutils fixes for amd64 code.
+    - rules: Replace all "dh_* -a" with "dh_* -s".  -a should NEVER be
+    used.  See debhelper(7).
 
   [ Aurelien Jarno ]
   * Fix a remote denial of service in NFS server (FreeBSD-SA-06:10.nfs / CVE-2006-0900).
 
- -- Robert Millan <rmh@aybabtu.com>  Thu,  2 Mar 2006 11:38:52 +0100
+ -- Robert Millan <rmh@aybabtu.com>  Thu,  2 Mar 2006 12:39:08 +0100
 
 kfreebsd-5 (5.3-6) unstable; urgency=low
 
